# getmywine

./: .dockerignore  .env.example  .gitignore  99-ideal-development-process.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  constitution.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/bot/: __init__.py  formatters.py  keyboards.py  main.py  messages.py  sender.py  utils.py
backend/app/core/: database.py  deps.py  rate_limit.py  security.py
backend/app/data/: wines_seed.json
backend/app/models/: __init__.py  conversation.py  login_attempt.py  message.py  password_reset_token.py  telegram_user.py  user.py  wine.py
backend/app/repositories/: conversation.py  login_attempt.py  message.py  password_reset.py  telegram_user.py  user.py  wine.py
backend/app/routers/: auth.py  chat.py  pages.py  wine.py
backend/app/schemas/: auth.py  chat.py  conversation.py  wine.py
backend/app/scripts/: generate_embeddings.py
backend/app/services/: ai_mock.py  auth.py  chat.py  email.py  embedding.py  events.py  llm.py  proactive_suggestions.py  session_context.py  session_naming.py  sommelier.py  sommelier_prompts.py  telegram_bot.py  wine.py
backend/app/templates/: base.html  chat.html  home.html
backend/app/utils/: wine_normalization.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_users_table.py  002_create_login_attempts_table.py  003_create_password_reset_tokens_table.py  004_create_chat_tables.py  006_seed_wines.py  (+10 more)
backend/tests/: conftest.py
(+268 files in other folders)
